--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 	<link rel="stylesheet" href="css/plugins/leaflet.customZoom.css"/>
 	<link rel="stylesheet" href="css/plugins/leaflet.displays.css"/>
 
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<script type="module" src="js/MD5.js"></script>
-    <script type="module" src="js/leaflet.js"></script>
+    	<script type="module" src="js/leaflet.js"></script>
 	<script type="module" src="js/plugins/leaflet.fullscreen.js"></script>
 	<script type="module" src="js/plugins/leaflet.zoom.js"></script>
 	<script type="module" src="js/plugins/leaflet.position.js"></script>
