--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
   <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
-    <title>RS3 Dev Map</title>
+    	<title>RS3 Dev Map</title>
 	<link rel="icon" 
-      type="image/png" 
-      href="images/favicon_world.png"/>
+      	type="image/png" 
+      	href="images/favicon_world.png"/>
 
 	<link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/leaflet.css"/>
-    <link rel="stylesheet" href="css/plugins/leaflet.fullscreen.css"/>
+    	<link rel="stylesheet" href="css/leaflet.css"/>
+    	<link rel="stylesheet" href="css/plugins/leaflet.fullscreen.css"/>
 	<link rel="stylesheet" href="css/plugins/leaflet.MousePosition.css"/>
 	<link rel="stylesheet" href="css/plugins/leaflet.icons.css"/>
 	<link rel="stylesheet" href="css/plugins/leaflet.mapSelector.css"/>
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="css/plugins/leaflet.displays.css"/>
 
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="module" src="js/MD5.js"></script>
     	<script type="module" src="js/leaflet.js"></script>
 	<script type="module" src="js/plugins/leaflet.fullscreen.js"></script>
@@ -33,7 +34,7 @@
 	<script type="module" src="js/main/main.js"></script>
 	
 	</head>
-  <body>
+  	<body>
      <div id="map"></div>    
   </body>
 </html>
